feat(plagiarism): implement synchronous upload blocker & full-text comparison'